# CompNets

LAB1/: CMakeLists.txt  client-tcp.c  client-udp.c  server-tcp.c  server-udp.c  Сімков_М_Д_ДА_21_Лаб_1_Комп_мережі.docx
LAB2/: Сімков_М_Д_ДА_21_Лаб_2_Комп_мережі.docx
